# CoinPaymentsLib

./: .gitignore  CoinPaymentsLib.sln
CoinPaymentsLib/: Interfaces.cs  Stubs.cs
CoinPaymentsLib/doc/: api.md
CoinPaymentsLib/src/: Interfaces.cs  Stubs.cs
Tests/: Tests.csproj
bench/: Cargo.toml
bench/benches/: bench.rs
bench/src/: lib.rs
docs/: 2021-06-10-update.md  acceptance-test.md  build.md  index.md
docs/.bundle/: config
integration/: BlockExplorer.cs  Program.cs  Signer.cs  integration.csproj  integration.sln
integration/ZcashLib/: BlockExplorer.cs  Signer.cs  ZcashLib.csproj
integration/ZcashLib.Tests/: BlockExplorerTests.cs  SignerTests.cs  ZcashLib.Tests.csproj
mock_notification_listener/: index.js  package.json
sapling/: .gitignore  Cargo.toml  build.rs  zams-template.ini
sapling/data/: block.json
sapling/proto/: api.proto
sapling/sql/: down.sql  test_data.sql  up.sql
sapling/src/: config.rs  db.rs  decrypt.rs  error.rs  init.rs  keys.rs  lib.rs  main.rs  notification.rs  perfcounters.rs  trp.rs  utils.rs  wallet.rs
sapling/src/trp/: db.rs  zcashdrpc.rs
sapling/src/wallet/: fvk.rs  init.rs  scan.rs  transaction.rs
zams/: .env  .gitignore  Cargo.toml  newblock.sh
zams/benches/: taddr.rs
zams/migrations/2021-05-20-133705_create_transactions/: up.sql
zams/migrations/2021-05-21-015914_create_accounts/: down.sql  up.sql
zams/migrations/2021-05-22-072710_create_notes/: up.sql
zams/migrations/2021-05-26-010544_create_saplings/: down.sql  up.sql
zams/proto/: api.proto
zams/sql/: down.sql
zams/src/: db.rs  decrypt.rs  decrypt2.rs  explorer.rs  lib.rs  models.rs  scanner.rs  schema.rs  signer.rs  testconfig.rs  zcashdrpc.rs
zams/src/trp/: zcashdrpc.rs
zams/src/wallet/: shielded_output.rs  transaction.rs
zams/test/: test-version.sh
