[package]
name = "sapling"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "zams"
path = "src/bin/zams.rs"

[[bin]]
name = "signer"
path = "src/bin/signer.rs"

[dependencies]
anyhow = "1.0.40"
log = "0.4.14"
flexi_logger = {version="0.17.1", features = ["compress"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
tonic = { version = "^0.4", features = ["tls", "tokio", "tls-roots"] }
prost = "0.7"
tokio = { version = "^1.6", features = ["macros", "rt-multi-thread"] }
protobuf = "2.23.0"
postgres = { version = "0.19.1", features = ["with-time-0_2"] }
reqwest = { version = "0.11.3", features = ["json"] }
bech32 = "0.8.0"
jubjub = "0.6"
ff = "0.9"
time = "0.2"
clap = "3.0.0-beta.2"
hex = "0.4.3"
rand = "0.8.3"
bytes = "1.0.1"
toml = "0.5.8"
itertools = "0.10.0"
maplit = "1.0.2"
futures = "0.3.15"
secp256k1 = "0.20.2"
tiny-hderive = "0.3.0"
tiny-bip39 = "0.8"
ripemd160 = "0.9.1"
sha2 = "0.9.5"

[dependencies.zcash_client_backend]
git = "https://github.com/zcash/librustzcash.git"
rev = "d50bb12a97da768dc8f3ee39b81f84262103e6eb"

[dependencies.zcash_primitives]
git = "https://github.com/zcash/librustzcash.git"
features = [ "transparent-inputs" ]
rev = "d50bb12a97da768dc8f3ee39b81f84262103e6eb"

[dependencies.zcash_proofs]
git = "https://github.com/zcash/librustzcash.git"
rev = "d50bb12a97da768dc8f3ee39b81f84262103e6eb"

[build-dependencies]
tonic-build = { version = "^0.4", features = ["prost"] }
