[package]
name = "zams"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

[[bin]]
name = "explorer"
path = "src/explorer.rs"

[dependencies]
tonic = "0.4.3"
prost = "0.7.0"
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
clap = "3.0.0-beta.2"
anyhow = "1.0.40"
log = "0.4.14"
flexi_logger = {version="0.17.1", features=["compress"]}

[build-dependencies]
tonic-build = "0.4.2"
