[package]
name = "zams"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

[[bin]]
name = "explorer"
path = "src/explorer.rs"

[dependencies]
tonic = "0.4.3"
prost = "0.7.0"
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
reqwest = {version = "0.11.3", features = ["json"]}
clap = "3.0.0-beta.2"
anyhow = "1.0.40"
log = "0.4.14"
flexi_logger = {version="0.17.1", features = ["compress"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
toml = "0.5.8"
diesel = {version = "1.4.6", features = ["postgres"]}
hex = "0.4.3"
tiny-bip39 = "0.8.0"
tiny-hderive = "0.3.0"
secp256k1 = "0.20.2"
ripemd160 = "0.9.1"
maplit = "1.0.2"

[dependencies.zcash_client_backend]
git = "https://github.com/zcash/librustzcash.git"
tag = "0.5.0"

[dependencies.zcash_primitives]
git = "https://github.com/zcash/librustzcash.git"
tag = "0.5.0"

[dependencies.zcash_proofs]
git = "https://github.com/zcash/librustzcash.git"
tag = "0.5.0"

[build-dependencies]
tonic-build = "0.4.2"
